test/main/com/ocaml/sdk/output/errors/syntax/in.ml
let x = let y = 5 in
        in y
(*
File "in.ml", line 2, characters 8-10:
Error: Syntax error

File "in.ml", line 2, characters 8-10:
2 |         in y
            ^^
Error: Syntax error
*)